Adjusted dynamic button sizing and centering and applied grid layout to entire document, fixing the white space issue

--- a/style-sections.css
+++ b/style-sections.css
@@ -159,6 +159,8 @@
 	font-size: 1.1rem;
 	margin: .3rem 1rem;
 	max-height: 3.5rem;
+	max-width: 12rem;
+	min-width: 7rem; 
 }
 
 .web-app__link-button:hover {
@@ -167,11 +169,11 @@
 
 .web-app__link-buttons-container {
 	display: grid;
-	font-size: 1rem;
 	grid-template-columns: 1fr 1fr;
 	margin-bottom: 1%;
-	margin-left: 12%;
-	margin-right: 12%;
+	margin-left: 10rem;
+	margin-right: 10rem;
+	max-width: 30rem; 
 }
 
 .web-app__subtitle {
