--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ a.navbar__link:hover {
 }
 
 body {
+	display: grid;
 	font-family: var(--theme-font-family);
 	margin: 0;
 	overflow-x: hidden;
